--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -15,6 +15,16 @@ body{
     //scroll-snap-type: y mandatory;
     font-family: 'Open Sans', sans-serif;
 
+    &.dark section.hero .dark-mode p{
+        #darkmode-off{
+            display: none;
+        }
+
+        #darkmode-on{
+            display: inline-block;
+        }
+    }
+
     &.visible{
         .mobile-nav-container{
             display: flex;
@@ -237,6 +247,38 @@ body{
                 width: 50px;
                 height: 50px;
                 cursor: pointer;*/
+            }
+
+            .dark-mode{
+                display: inline-block;
+                position: absolute;
+                bottom: 20px;
+                right: 20px;
+                p{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-transform: uppercase;
+                    color: white;
+                    user-select: none;
+
+                    svg{
+                        justify-content: center;
+                        align-items: center;
+                        padding-left: 15px;
+                        width: 50px;
+                        height: 50px;
+                        cursor: pointer;
+
+                        &#darkmode-off{
+                            display: inline-block;
+                        }
+
+                        &#darkmode-on{
+                            display: none;
+                        }
+                    }
+                }
             }
         }
 
